--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "planosur-stock-manager",
-   "version": "0.0.0",
+   "version": "0.0.1",
    "description": "Webapp for stock managment",
    "author": {
       "name": "Facundo Rodriguez",
@@ -21,6 +21,10 @@
       "preview": "vite preview"
    },
    "dependencies": {
+      "@chakra-ui/react": "^1.8.3",
+      "@emotion/react": "^11",
+      "@emotion/styled": "^11",
+      "framer-motion": "^5",
       "react": "^17.0.2",
       "react-dom": "^17.0.2"
    },
