--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
       "@chakra-ui/react": "^1.8.3",
       "@emotion/react": "^11",
       "@emotion/styled": "^11",
+      "axios": "^0.25.0",
       "framer-motion": "^5",
       "react": "^17.0.2",
-      "react-dom": "^17.0.2"
+      "react-dom": "^17.0.2",
+      "react-hook-form": "^7.26.1",
+      "react-query": "^3.34.14"
    },
    "devDependencies": {
       "@types/react": "^17.0.33",
