--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
       "@emotion/styled": "^11",
       "axios": "^0.25.0",
       "framer-motion": "^5",
+      "hookrouter": "^1.2.5",
       "react": "^17.0.2",
       "react-dom": "^17.0.2",
       "react-hook-form": "^7.26.1",
       "react-query": "^3.34.14"
    },
    "devDependencies": {
+      "@types/hookrouter": "^2.2.5",
       "@types/react": "^17.0.33",
       "@types/react-dom": "^17.0.10",
       "@typescript-eslint/eslint-plugin": "^5.10.2",
