--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
       "hookrouter": "^1.2.5",
       "react": "^17.0.2",
       "react-dom": "^17.0.2",
+      "react-feather": "^2.0.9",
       "react-hook-form": "^7.26.1",
       "react-query": "^3.34.14"
    },
