Rework naviation of dropdown query

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,6 +46,7 @@
       "prefer-template": 2,
       "no-useless-rename": 2,
       "no-else-return": [2, { "allowElseIf": false }],
+      "no-console": 1,
       "quote-props": [2, "as-needed"],
       "class-methods-use-this": 1,
       "prefer-destructuring": 0,
