--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
       "react-dom": "^17.0.2",
       "react-feather": "^2.0.9",
       "react-hook-form": "^7.26.1",
-      "react-query": "^3.34.14"
+      "react-query": "^3.34.14",
+      "react-table": "^7.7.0"
    },
    "devDependencies": {
       "@types/hookrouter": "^2.2.5",
       "@types/react": "^17.0.33",
       "@types/react-dom": "^17.0.10",
+      "@types/react-table": "^7.7.9",
       "@typescript-eslint/eslint-plugin": "^5.10.2",
       "@typescript-eslint/parser": "^5.10.2",
       "@vitejs/plugin-react": "^1.0.7",
