--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
    },
    "homepage": "https://github.com/facundon/planosur-stock-manager",
    "scripts": {
-      "dev": "vite",
+      "dev": "vite --host",
       "build": "tsc && vite build",
       "preview": "vite preview"
    },
