--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -63,6 +63,7 @@
       "@typescript-eslint/consistent-type-definitions": [2, "type"],
       "@typescript-eslint/explicit-function-return-type": 0,
       "@typescript-eslint/no-unsafe-return": 0,
-      "@typescript-eslint/member-ordering": 1
+      "@typescript-eslint/member-ordering": 1,
+      "@typescript-eslint/no-non-null-assertion": 0
    }
 }
