--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
    },
    "homepage": "https://github.com/facundon/planosur-stock-manager",
    "scripts": {
-      "dev": "vite --host",
+      "dev": "concurrently -k -n vite,tsc -c bgBlue.bold,bgMagenta.bold \"vite --host --clearScreen false\" \"tsc -w --preserveWatchOutput\"",
       "build": "tsc && vite build",
       "preview": "vite preview"
    },
@@ -43,6 +43,7 @@
       "@typescript-eslint/eslint-plugin": "^5.10.2",
       "@typescript-eslint/parser": "^5.10.2",
       "@vitejs/plugin-react": "^1.0.7",
+      "concurrently": "^7.0.0",
       "eslint": "^8.8.0",
       "eslint-config-prettier": "^8.3.0",
       "eslint-plugin-prettier": "^4.0.0",
